--- a/config.example.json
+++ b/config.example.json
@@ -28,15 +28,17 @@
         }
     },
     "rich_presence": {
-    "enabled": false,
-    "client_id": "1018195507560063039",
-    "state": "ghost aint dead",
-    "details": "",
-    "large_image": "ghost",
-    "large_text": "",
-    "small_image": "",
-    "small_text": "",
-    "name": "Ghost"
-},
-    "rich_embed_webhook": ""
+        "enabled": false,
+        "state": "ghost aint dead",
+        "state_url": "",
+        "details": "",
+        "details_url": "",
+        "large_image": "https://avatars.githubusercontent.com/u/187971942?s=200&v=4",
+        "large_text": "ghostt.cc",
+        "large_url": "https://ghostt.cc/",
+        "small_image": "",
+        "small_text": "",
+        "small_url": "",
+        "name": "Ghost"
+    }
 }
