--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ certifi
 git+https://github.com/ghostselfbot/discord.py-self_embed.git
 bs4
 hPyT; sys_platform == "win32"
+pyobjc; sys_platform == "darwin"
